# Python-MCP-Host-Universal

./: LICENSE  README.md  index.js  package.json  pyproject.toml
.github/workflows/: npm-publish-github-packages.yml  python-ci.yml
docs/: migration-from-node.md  usage.md
src/mcp_host_universal/: __init__.py  __main__.py  chat.py  cli.py  commands.py  config.py  mcp_runtime.py  models.py  onboarding.py  openrouter.py  session.py  templates.py  tools.py
src/mcp_host_universal/ui/: __init__.py  input.py  menu.py  render.py  theme.py
tests/: test_chat.py  test_cli_entrypoint.py  test_cli_integration.py  test_commands.py  test_config.py  test_mcp_runtime.py  test_models.py  test_no_npm_runtime.py  test_onboarding.py  test_openrouter.py  test_security_logging.py  test_tools.py  test_ui_input.py  test_ui_menu.py  test_ui_render.py
